# CSEG437

./: CMakeLists.txt  README.md
HW1/: CMakeLists.txt  OpenCL_util.h  benchmark_suites.h  main.cpp  opencl_kernel.h  opencl_wrapper.h  personal_utils.h  reduce_sum.cl  simple_kernel.cl  simple_kernel2.cl
HW2/: CMakeLists.txt  cpu_implementation.cpp  cpu_implementation.h  display.cpp  display.h  main.cpp  my_OpenCL_util.h  ode_solver.h  parameters.h  test_main.cpp  thread_pool.cpp  thread_pool.h
HW2/programs/: cloth_normal.cl  cloth_position.cl
HW2/shaders/: phong.frag  phong.vert
HW3/: findtopic.jl  linalg.h  main.cpp  sparse_svd.cpp
HW3/database/: doc000.txt  doc001.txt  doc002.txt  doc003.txt  doc004.txt  doc005.txt  doc006.txt  doc007.txt  doc008.txt  doc009.txt  doc010.txt  doc011.txt  doc012.txt  doc013.txt  doc014.txt  doc015.txt  doc016.txt  doc017.txt  doc018.txt  doc019.txt  doc020.txt  doc021.txt  doc022.txt  doc023.txt  doc024.txt  doc025.txt  doc026.txt  doc027.txt  doc028.txt  doc029.txt  doc030.txt  doc031.txt  doc032.txt  doc033.txt  doc034.txt  doc035.txt  doc036.txt  doc037.txt  doc038.txt  doc039.txt  (+973 more)
